50% done with fixing alignment with projects bar

--- a/style.css/styles.css
+++ b/style.css/styles.css
@@ -91,9 +91,24 @@ footer {
   color: #00ffdc;
   margin-left: 40%;
 }
-
+/*Might need to change display: block and justify-content in projectz*/
 .projectz {
-  align-content: center;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 12.5%;
+  margin-right: 12.5%;
+}
+
+.projectz ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.projectz a {
+  display: block;
+  padding: 5px;
+  text-decoration: none;
 }
 
 h1 {
